--- a/digsandpaper/elasticsearch_mapping/default_mapping.json
+++ b/digsandpaper/elasticsearch_mapping/default_mapping.json
@@ -210,6 +210,11 @@
   },
   "settings": {
     "index": {
+       "mapping": {
+         "total_fields": {
+          "limit": 2000
+        }
+      },
       "number_of_shards": "5",
       "number_of_replicas": "0",
       "analysis": {
