Disable _all field

--- a/digsandpaper/elasticsearch_mapping/default_mapping.json
+++ b/digsandpaper/elasticsearch_mapping/default_mapping.json
@@ -1,6 +1,9 @@
 {
   "mappings": {
     "ads": {
+      "_all": {
+        "enabled": false 
+      },
       "properties": {
         "@execution_profile": {
           "properties": {
