Add TimestampCrawl to etk config

--- a/config/etk/predicate_range_mappings.json
+++ b/config/etk/predicate_range_mappings.json
@@ -26,6 +26,7 @@
   "street_address": "Address",
   "title": "Title",
   "weight": "Weight",
+  "timestamp_crawl": "TimestampCrawl",
   "tld": "TopLevelDomain",
   "url": "URL",
   "website": "Website"
