--- a/digsandpaper/elasticsearch_mapping/default_mapping.json
+++ b/digsandpaper/elasticsearch_mapping/default_mapping.json
@@ -178,6 +178,10 @@
           "type": "date",
           "format": "strict_date_optional_time||epoch_millis"
         },
+        "timestamp_crawl": {
+          "type": "date",
+          "format": "strict_date_optional_time||epoch_millis"
+        },
         "response_headers": {
           "enabled": false
         },
