--- a/digsandpaper/elasticsearch_mapping/default_mapping.json
+++ b/digsandpaper/elasticsearch_mapping/default_mapping.json
@@ -99,6 +99,12 @@
             "inferlink_extractions": {
               "enabled": false
             },
+            "inferlink_posts": {
+              "enabled": false
+            },
+            "inferlink_posts_special_text": {
+              "enabled": false
+            },
             "table": {
               "enabled": false
             },
