--- a/config/etk/type_field_group_by_mappings.json
+++ b/config/etk/type_field_group_by_mappings.json
@@ -62,6 +62,9 @@
   "Weight": [
     "indexed.weight.high_confidence_keys"
   ],
+  "Timestamp": [
+    "timestamp"
+  ],
   "TimestampCrawl": [
     "timestamp_crawl"
   ],
