dynamic mapping to false, update version in setup.py

--- a/digsandpaper/elasticsearch_mapping/default_mapping.json
+++ b/digsandpaper/elasticsearch_mapping/default_mapping.json
@@ -4,6 +4,7 @@
       "_all": {
         "enabled": false 
       },
+      "dynamic":false,
       "properties": {
         "@execution_profile": {
           "properties": {
