--- a/digsandpaper/elasticsearch_mapping/default_mapping.json
+++ b/digsandpaper/elasticsearch_mapping/default_mapping.json
@@ -7,6 +7,7 @@
       "dynamic":false,
       "properties": {
         "@execution_profile": {
+          "dynamic":true,
           "properties": {
             "@doc_arrived_time": {
               "type": "date",
