Add created_by to default_mapping

--- a/digsandpaper/elasticsearch_mapping/default_mapping.json
+++ b/digsandpaper/elasticsearch_mapping/default_mapping.json
@@ -169,6 +169,9 @@
         "crawl_data": {
           "enabled": false
         },
+        "created_by": {
+          "type": "string"
+        },
         "doc_id": {
           "type": "string",
           "index": "not_analyzed"
