Install python3 in docker files

--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -2,20 +2,17 @@ FROM debian:jessie
 
 RUN apt-get update && apt-get install -y \
     wget \
-    python \
+    python3 \
+    python3-pip \
+    python3-venv \
     git \
     vim \
     curl \
     jq \
     && rm -rf /var/lib/apt/lists/*
 
-RUN wget https://bootstrap.pypa.io/get-pip.py && \
-    python get-pip.py
-
-RUN pip install --no-cache-dir virtualenv
-
-RUN virtualenv ~/elasticsearch2
-RUN virtualenv ~/elasticsearch5
+RUN python3 -m venv ~/elasticsearch2
+RUN python3 -m venv ~/elasticsearch5
 
 RUN mkdir /etc/sandpaper
 WORKDIR /etc/sandpaper
@@ -25,7 +22,7 @@ ENTRYPOINT ["/etc/sandpaper/docker-entrypoint.sh"]
 CMD ["--config", "config/sandpaper.json", "--host", "0.0.0.0", "--endpoint", "http://elasticsearch:9200"]
 
 RUN git clone https://github.com/usc-isi-i2/dig-sandpaper.git .
-RUN /bin/bash -c "source ~/elasticsearch2/bin/activate && ES_MAJOR_VERSION=2 pip install --no-cache-dir -e /etc/sandpaper"
-RUN /bin/bash -c "source ~/elasticsearch5/bin/activate && ES_MAJOR_VERSION=5 pip install --no-cache-dir -e /etc/sandpaper"
+RUN /bin/bash -c "source ~/elasticsearch2/bin/activate && ES_MAJOR_VERSION=2 pip3 install -e /etc/sandpaper"
+RUN /bin/bash -c "source ~/elasticsearch5/bin/activate && ES_MAJOR_VERSION=5 pip3 install -e /etc/sandpaper"
 
 VOLUME /etc/sandpaper/config
