--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -2,20 +2,17 @@ FROM debian:jessie
 
 RUN apt-get update && apt-get install -y \
     wget \
-    python \
+    python3 \
+    python3-pip \
+    python3-venv \
     git \
     vim \
     curl \
     jq \
     && rm -rf /var/lib/apt/lists/*
 
-RUN wget https://bootstrap.pypa.io/get-pip.py && \
-    python get-pip.py
-
-RUN pip install --no-cache-dir virtualenv
-
-RUN virtualenv ~/elasticsearch2
-RUN virtualenv ~/elasticsearch5
+RUN python3 -m venv ~/elasticsearch2
+RUN python3 -m venv ~/elasticsearch5
 
 RUN mkdir /etc/sandpaper
 WORKDIR /etc/sandpaper
@@ -26,8 +23,8 @@ CMD ["--config", "config/sandpaper.json", "--host", "0.0.0.0", "--endpoint", "ht
 
 COPY . /etc/sandpaper
 
-RUN /bin/bash -c "source ~/elasticsearch2/bin/activate && ES_MAJOR_VERSION=2 pip install --no-cache-dir -e /etc/sandpaper"
-RUN /bin/bash -c "source ~/elasticsearch5/bin/activate && ES_MAJOR_VERSION=5 pip install --no-cache-dir -e /etc/sandpaper"
+RUN /bin/bash -c "source ~/elasticsearch2/bin/activate && ES_MAJOR_VERSION=2 pip3 install -e /etc/sandpaper"
+RUN /bin/bash -c "source ~/elasticsearch5/bin/activate && ES_MAJOR_VERSION=5 pip3 install -e /etc/sandpaper"
 
 VOLUME /etc/sandpaper/config
 
