move sandpaper image to uscisii2 organisation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   sandpaper:
-    image: "digsandpaper/digsandpaper"
+    image: "uscisii2/digsandpaper"
     ports: 
       - "9876:9876"
     volumes: 
