add another phase: postprocess to sandpaper

--- a/digsandpaper/default_config.json
+++ b/digsandpaper/default_config.json
@@ -245,6 +245,15 @@
           "name": "ElasticsearchQueryCompiler"
         }
       ]
+    },
+    "postprocess": {
+      "components": [
+        {
+          "type": "DocumentsRerank",
+          "name": "SimilarityScoreRerank",
+          "sort": "desc"
+        }
+      ]
     }
   },
   "indexing": {
