change sort order

--- a/digsandpaper/default_config.json
+++ b/digsandpaper/default_config.json
@@ -75,7 +75,9 @@
               "content_extraction.content_strict.text",
               "content_extraction.title.text"
             ],
-            "Ad": ["doc_id"],
+            "Ad": [
+              "doc_id"
+            ],
             "content": [
               "content_extraction.content_relaxed.text",
               "content_extraction.content_strict.text",
@@ -251,7 +253,7 @@
         {
           "type": "DocumentsRerank",
           "name": "SimilarityScoreRerank",
-          "sort": "desc"
+          "sort": "asc"
         }
       ]
     }
