change sandpaper to work with sentence ids, add split sentences to included fields

--- a/digsandpaper/default_config.json
+++ b/digsandpaper/default_config.json
@@ -216,7 +216,8 @@
               "knowledge_graph.*",
               "content_extraction.content_strict.text",
               "content_extraction.title.text",
-              "objects.*"
+              "objects.*",
+              "split_sentences"
             ],
             "excluded_source_fields": [
               "content_extraction.content_relaxed.text",
