add option to rerank by doc

--- a/digsandpaper/default_config.json
+++ b/digsandpaper/default_config.json
@@ -37,7 +37,8 @@
           "name": "ConstraintReMapSimilarity",
           "constraint_remap_config": {
             "similarity_url": "http://52.53.214.202:5954/search",
-            "k": 10
+            "k": 10,
+            "rerank_by_doc": false
           }
         }
       ]
